2005-06-22  Nathaniel Smith  <njs@codesourcery.com>

	* netcmd.cc, netsync.cc: Revert backwards compatibility code; 0.19
	and 0.20 can't be usefully compatible, and the code as it existed
	would cause real version mismatch error reporting to not work
	right.  (Old client with new server would give a generic "server
	disconnected" error message instead of something useful.)

2005-06-21  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc (rebuild_merkle_trees): Fix FIXME comments to match
	reality.
	* tests/t_netsync_diffbranch.at: No longer a bug, remove
	priority.

2005-06-20  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Hook Reference): Oops, missed a @ref.

2005-06-20  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Default monotonerc): Rename section to...
	(Default hooks): ...this, to emphasize is still read even when a
	monotonerc exists.

2005-06-19  Richard Levitte  <richard@levitte.org>

	* Makefile.am: There's no reason for monotone.pdf or .dvi to
	depend on monotone.info, since they are built from the .texi
	files.  Also, make the monotone.html and html targets depend
	on version.texi and std_hooks.lua as well.

2005-06-18  Matt Johnston  <matt@ucc.asn.au>

	* INSTALL: fix typo, should be -Iboost_1_31_0 not -Iboost_1_31_2

2005-06-18  Riccardo Ghetta  <birrachiara@tin.it>
	* monotone.texi: include std_hooks.lua as an appendix and remove long
	lua excerpts from hook reference.
	* Makefile.am : make monotone.pdf/eps depend on monotone.info
	
2005-06-17  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (database::execute()): truncate long query log messages
	before copying, saving memory. 
	Patch from Eric Anderson < ea at cello hpl hp com >

2005-06-17  Riccardo Ghetta  <birrachiara@tin.it>
	Adds include()/includedir() to lua hooks and extend --rcfile
	* lua.cc: handle --rcfile with directories, implement
	include() and includedir()
	* testsuite.at, t_lua_includedir.at, t_rcfile_dir.at:
	test new functionality